# joaosnet.github.io

./: .env.example  .gitignore  AGENTS.md  CNAME  GOOGLE_APPS_SCRIPT_CODE.gs  index.html  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml  update_projects.py
.codex/: hooks.json
.github/: copilot-instructions.md
.github/workflows/: update_projects.yml
assets/css/: styles.css
assets/js/: animations.js  contact-form.js  geo-counter.js  horizontal-scroll.js  mobile-menu.js  project-details.js  theme-manager.js  theme-selector.js  theme.js  utils.js
docs/: analytics-apps-script.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: TESTES.md  test_env_variables.py  test_site_structure.py  test_update_projects.py
